# AI-trading-bot

./: README.md
trading_bot/: CMakeLists.txt  README.md
trading_bot/data/: stock_data.csv
trading_bot/src/: Indicator.cpp  Indicator.h  MarketData.cpp  MarketData.h  Portfolio.cpp  Portfolio.h  TradingBot.cpp  TradingBot.h  main.cpp
